# qTodo

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  todos.json
cli/: commands.py
cli/commands/: add.py  done.py  editlist.py  lists.py  ls.py  newlist.py  rm.py  rmlist.py  switch.py  utils.py
cli/handlers/list/: list_group.py
cli/handlers/list/commands/: create.py  delete.py  update.py  view.py
cli/handlers/todo/commands/: add.py  delete.py  update.py
cli/list/commands/: create.py  delete.py  update.py  view.py
cli/todo/: todo_group.py
cli/todo/commands/: add.py  delete.py  update.py  view.py
core/: db.py
models/: todo.py
utils/: __init__.py  date_formatter.py  date_parser.py
